get_routes_and_neighbours command.
Rename ieee_address to ieee.

--- a/services.yaml
+++ b/services.yaml
@@ -2,7 +2,7 @@
 execute:
   description: Execute custom zha service
   fields:
-    ieee_address:
+    ieee:
       description: IEEE address of the node to execute command
       example: "00:0d:6f:00:05:7d:2d:34"
     command:
