--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,8 @@
 {
-  "domain": "zha_custom",
-  "name": "ZHA Custom Service",
-  "documentation": "https://www.home-assistant.io/components/zha_custom",
-  "requirements": [],
-  "dependencies": ["zha"],
-  "codeowners": [
-    "@dmulcahey",
-    "@adminiuga"
-  ]
+    "domain": "zha_custom",
+    "name": "ZHA Custom Service",
+    "documentation": "https://www.home-assistant.io/components/zha_custom",
+    "requirements": [],
+    "dependencies": ["zha"],
+    "codeowners": ["@dmulcahey", "@adminiuga"],
 }
