--- a/manifest.json
+++ b/manifest.json
@@ -4,5 +4,5 @@
     "documentation": "https://www.home-assistant.io/components/zha_custom",
     "requirements": [],
     "dependencies": ["zha"],
-    "codeowners": ["@dmulcahey", "@adminiuga"],
+    "codeowners": ["@dmulcahey", "@adminiuga"]
 }
