--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,10 @@
 {
     "domain": "zha_custom",
     "name": "ZHA Custom Service",
-    "documentation": "https://www.home-assistant.io/components/zha_custom",
+    "documentation": "https://github.com/mdeweerd/zha_custom",
     "requirements": [],
     "dependencies": ["zha"],
+    "iot_class": "local_polling",
     "version": "0.0.1.1",
     "codeowners": ["@dmulcahey", "@adminiuga"],
     "issue_tracker": "https://github.com/mdeweerd/zha_custom/issues"
