--- a/custom_components/zha_custom/manifest.json
+++ b/custom_components/zha_custom/manifest.json
@@ -6,6 +6,6 @@
     "dependencies": ["zha"],
     "iot_class": "local_polling",
     "version": "0.0.1.1",
-    "codeowners": ["@dmulcahey", "@adminiuga"],
+    "codeowners": ["@mdeweerd"],
     "issue_tracker": "https://github.com/mdeweerd/zha_custom/issues"
 }
