--- a/manifest.json
+++ b/manifest.json
@@ -4,5 +4,7 @@
     "documentation": "https://www.home-assistant.io/components/zha_custom",
     "requirements": [],
     "dependencies": ["zha"],
+    "iot_class": "local_polling",
+    "version": "0.0.1.1",
     "codeowners": ["@dmulcahey", "@adminiuga"]
 }
