--- a/custom_components/zha_custom/services.yaml
+++ b/custom_components/zha_custom/services.yaml
@@ -121,6 +121,7 @@ execute:
       selector:
         number:
           min: 0
+          min: 65535
     dir:
       description: Direction indicator, according to commmand
       selector:
@@ -132,6 +133,7 @@ execute:
       selector:
         number:
           min: 0 
+          min: 255
     state_id:
       description: When defined, name of state to write the read attribute value to
       example: sensor.example
