--- a/custom_components/zha_custom/services.yaml
+++ b/custom_components/zha_custom/services.yaml
@@ -121,7 +121,7 @@ execute:
       selector:
         number:
           min: 0
-          min: 65535
+          max: 65535
     dir:
       description: Direction indicator, according to commmand
       selector:
