Improved attr_write success verification for string

--- a/custom_components/zha_custom/services.yaml
+++ b/custom_components/zha_custom/services.yaml
@@ -175,3 +175,7 @@ execute:
        description: "Force writing the attribute even if the read attribute already matches.  Defaults to False"
        selector:
          boolean:
+    expect_reply:
+       description: "Wait for/expect a reply (not used yet)"
+       selector:
+         boolean:
