--- a/custom_components/zha_toolkit/manifest.json
+++ b/custom_components/zha_toolkit/manifest.json
@@ -1,11 +1,11 @@
 {
-    "domain": "zha-toolkit",
-    "name": "ZHA Custom Service",
+    "domain": "zha_toolkit",
+    "name": "ZHA Toolkit Service",
     "documentation": "https://github.com/mdeweerd/zha-toolkit",
     "requirements": [],
     "dependencies": ["zha"],
     "iot_class": "local_polling",
-    "version": "0.0.1.1",
+    "version": "0.5.0",
     "codeowners": ["@mdeweerd"],
     "issue_tracker": "https://github.com/mdeweerd/zha-toolkit/issues"
 }
