--- a/custom_components/zha_toolkit/services.yaml
+++ b/custom_components/zha_toolkit/services.yaml
@@ -1,6 +1,6 @@
 # Describes the format for available zha services
 execute:
-  description: Execute custom zha service (Examine the documentation or code to know which parameters are needed)
+  description: Execute ZHA Toolkit service (Examine the documentation or code to know which parameters are needed)
   fields:
     command:
       description: Command name
