--- a/blueprints/backup_znp.yaml
+++ b/blueprints/backup_znp.yaml
@@ -13,12 +13,18 @@ trigger:
     at: !input backup_time
 condition: []
 action:
-  - service: zha-toolkit.execute
+  - service: zha_toolkit.execute
     data:
       command: znp_backup
       command_data: '{{ now().strftime("_%d") }}'
-  - service: zha-toolkit.execute
+      event_success: znp_backup_success
+      event_fail: znp_backup_failed
+      event_done: znp_backup_done
+  - service: zha_toolkit.execute
     data:
       command: znp_nvram_backup
       command_data: '{{ now().strftime("_%d") }}'
+      event_success: znp_nvram_backup_success
+      event_fail: znp_nvram_backup_failed
+      event_done: znp_nvram_backup_done
 mode: restart
