--- a/custom_components/zha_toolkit/manifest.json
+++ b/custom_components/zha_toolkit/manifest.json
@@ -7,5 +7,5 @@
     "iot_class": "local_polling",
     "version": "0.5.0",
     "codeowners": ["@mdeweerd"],
-    "issue_tracker": "https://github.com/mdeweerd/zha-toolkit/issues",
+    "issue_tracker": "https://github.com/mdeweerd/zha-toolkit/issues"
 }
