--- a/custom_components/zha_toolkit/manifest.json
+++ b/custom_components/zha_toolkit/manifest.json
@@ -1,11 +1,15 @@
 {
-    "domain": "zha_toolkit",
-    "name": "ZHA Toolkit Service",
+    "codeowners": [
+        "@mdeweerd"
+    ],
+    "dependencies": [
+        "zha"
+    ],
     "documentation": "https://github.com/mdeweerd/zha-toolkit",
-    "requirements": [],
-    "dependencies": ["zha"],
+    "domain": "zha_toolkit",
     "iot_class": "local_polling",
-    "version": "0.5.0",
-    "codeowners": ["@mdeweerd"],
-    "issue_tracker": "https://github.com/mdeweerd/zha-toolkit/issues"
+    "issue_tracker": "https://github.com/mdeweerd/zha-toolkit/issues",
+    "name": "ZHA Toolkit Service",
+    "requirements": [],
+    "version": "0.5.0"
 }
