--- a/.github/workflows/lint_python.yml
+++ b/.github/workflows/lint_python.yml
@@ -12,7 +12,7 @@ jobs:
       - run: bandit --recursive --skip B101,B311 .
       - run: black --check . || true
       - run: codespell --ignore-words-list="hass"
-      - run: flake8 . --count --ignore F841,C901,W503
+      - run: flake8 . --count --ignore F841,C901,W503,B006
                       --max-complexity=21 --max-line-length=184 --show-source --statistics
       - run: isort --check-only --profile black . || true
       - run: pip install -r requirements.txt || pip install --editable . || true
