Change version 'dev' to '0.0.0' for development to pass hacs

--- a/custom_components/zha_toolkit/manifest.json
+++ b/custom_components/zha_toolkit/manifest.json
@@ -11,5 +11,5 @@
     "issue_tracker": "https://github.com/mdeweerd/zha-toolkit/issues",
     "name": "ZHA Toolkit Service",
     "requirements": [],
-    "version": "dev"
+    "version": "0.0.0"
 }
