--- a/custom_components/zha_toolkit/manifest.json
+++ b/custom_components/zha_toolkit/manifest.json
@@ -9,7 +9,7 @@
     "domain": "zha_toolkit",
     "iot_class": "local_polling",
     "issue_tracker": "https://github.com/mdeweerd/zha-toolkit/issues",
-    "name": "ZHA Toolkit Service",
+    "name": "🧰 ZHA Toolkit Service",
     "requirements": [],
     "version": "0.0.0"
 }
