Added parameter definition for handle_join

--- a/custom_components/zha_toolkit/services.yaml
+++ b/custom_components/zha_toolkit/services.yaml
@@ -355,3 +355,38 @@ attr_write:
        description: "Wait for/expect a reply (not used yet)"
        selector:
          boolean:
+handle_join:
+  description: Handle join (ZHA should re-interrogate the device as on new join)
+  fields:
+    ieee:
+      description: "Entity name,\ndevice name, or\nIEEE address of the node to execute command"
+      example: "00:0d:6f:00:05:7d:2d:34"
+      required: true
+      selector:
+        entity:
+          integration: zha
+    data:
+      description: Short network address of the device (optional, if known in ZHA)
+      selector:
+        number:
+          min: 1
+          max: 0xFFFF
+    event_success:
+      description: Event name in case of success
+      example: my_read_success_trigger_event
+      selector:
+        text:
+    event_fail:
+      description: Event name in case of failure
+      example: my_read_fail_trigger_event
+      selector:
+        text:
+    event_done:
+      description: Event name when the service call did all its work (either success or failure).  Has event data with relevant attributes.
+      example: my_read_done_trigger_event
+      selector:
+        text:
+    expect_reply:
+       description: "Wait for/expect a reply (not used yet)"
+       selector:
+         boolean:
