Fixed missing package names

--- a/custom_components/zha_toolkit/services.yaml
+++ b/custom_components/zha_toolkit/services.yaml
@@ -365,7 +365,7 @@ handle_join:
       selector:
         entity:
           integration: zha
-    data:
+    command_data:
       description: Short network address of the device (optional, if known in ZHA)
       selector:
         number:
