--- a/custom_components/zha_toolkit/services.yaml
+++ b/custom_components/zha_toolkit/services.yaml
@@ -375,22 +375,24 @@ attr_write:
        description: "Wait for/expect a reply (not used yet)"
        selector:
          boolean:
-handle_join:
-  description: Handle join (ZHA should re-interrogate the device as on new join)
+    csvout:
+      description: Filename of CSV to write read data to.  Written to 'csv' directory
+      example: '../web/mycsv.csv'
+      selector:
+        text:
+    csvlabel:
+      description: Label to use for read value (in CSV file)
+      example: SecretAttributeName
+      selector:
+        text:
+backup:
+  description: Backup coordinator data (znp, bellows/ezsp)
   fields:
-    ieee:
-      description: "Entity name,\ndevice name, or\nIEEE address of the node to execute command"
-      example: "00:0d:6f:00:05:7d:2d:34"
-      required: true
-      selector:
-        entity:
-          integration: zha
     command_data:
-      description: Short network address of the device (optional, if known in ZHA)
+      description: Suffix for backup file
+      example: "_bathroom_added"
       selector:
-        number:
-          min: 1
-          max: 0xFFFF
+        text:
     event_success:
       description: Event name in case of success
       example: my_read_success_trigger_event
@@ -410,13 +412,73 @@ handle_join:
        description: "Wait for/expect a reply (not used yet)"
        selector:
          boolean:
-    csvout:
-      description: Filename of CSV to write read data to.  Written to 'csv' directory
-      example: '../web/mycsv.csv'
+ezsp_backup:
+  description: Backup coordinator data (znp, bellows/ezsp)
+  fields:
+    command_data:
+      description: Suffix for backup file
+      example: "_bathroom_added"
       selector:
         text:
-    csvlabel:
-      description: Label to use for read value (in CSV file)
-      example: SecretAttributeName
+    event_success:
+      description: Event name in case of success
+      example: my_read_success_trigger_event
       selector:
         text:
+    event_fail:
+      description: Event name in case of failure
+      example: my_read_fail_trigger_event
+      selector:
+        text:
+    event_done:
+      description: Event name when the service call did all its work (either success or failure).  Has event data with relevant attributes.
+      example: my_read_done_trigger_event
+      selector:
+        text:
+    expect_reply:
+       description: "Wait for/expect a reply (not used yet)"
+       selector:
+         boolean:
+handle_join:
+  description: Handle join (ZHA should re-interrogate the device as on new join)
+  fields:
+    ieee:
+      description: "Entity name,\ndevice name, or\nIEEE address of the node to execute command"
+      example: "00:0d:6f:00:05:7d:2d:34"
+      required: true
+      selector:
+        entity:
+          integration: zha
+    command_data:
+      description: Short network address of the device (optional, if known in ZHA)
+      selector:
+        number:
+          min: 1
+          max: 0xFFFF
+znp_backup:
+  description: Backup coordinator data (znp, bellows/ezsp)
+  fields:
+    command_data:
+      description: Suffix for backup file
+      example: "_bathroom_added"
+      selector:
+        text:
+    event_success:
+      description: Event name in case of success
+      example: my_read_success_trigger_event
+      selector:
+        text:
+    event_fail:
+      description: Event name in case of failure
+      example: my_read_fail_trigger_event
+      selector:
+        text:
+    event_done:
+      description: Event name when the service call did all its work (either success or failure).  Has event data with relevant attributes.
+      example: my_read_done_trigger_event
+      selector:
+        text:
+    expect_reply:
+       description: "Wait for/expect a reply (not used yet)"
+       selector:
+         boolean:
