--- a/custom_components/zha_toolkit/services.yaml
+++ b/custom_components/zha_toolkit/services.yaml
@@ -412,6 +412,54 @@ backup:
        description: "Wait for/expect a reply (not used yet)"
        selector:
          boolean:
+bind_ieee:
+  description: Bind clusters from ieee device to command_data device
+  fields:
+    ieee:
+      description: "Entity name,\ndevice name, or\nIEEE address of the node to execute command"
+      example: "00:0d:6f:00:05:7d:2d:34"
+      required: true
+      selector:
+        entity:
+          integration: zha
+    command_data:
+      description: "Binding target\nEntity name,\ndevice name, or\nIEEE address of the node to execute command"
+      example: "00:0d:6f:00:05:7d:2d:34"
+      required: true
+      selector:
+        entity:
+          integration: zha
+    cluster:
+      description: target cluster (or all internally defined ones)
+      selector:
+        number:
+          min: 0
+          max: 0xFFFF
+    tries:
+      description: Number of times the zigbee packet should be attempted
+      selector:
+        number:
+          min: 0 
+          max: 255
+    event_success:
+      description: Event name in case of success
+      example: my_read_success_trigger_event
+      selector:
+        text:
+    event_fail:
+      description: Event name in case of failure
+      example: my_read_fail_trigger_event
+      selector:
+        text:
+    event_done:
+      description: Event name when the service call did all its work (either success or failure).  Has event data with relevant attributes.
+      example: my_read_done_trigger_event
+      selector:
+        text:
+    expect_reply:
+       description: "Wait for/expect a reply (not used yet)"
+       selector:
+         boolean:
 ezsp_backup:
   description: Backup coordinator data (znp, bellows/ezsp)
   fields:
@@ -455,8 +503,8 @@ handle_join:
         number:
           min: 1
           max: 0xFFFF
-bind_ieee:
-  description: Write Attribute (ZHA-Toolkit)
+misc_reinitialize:
+  description: Reinitialize device
   fields:
     ieee:
       description: "Entity name,\ndevice name, or\nIEEE address of the node to execute command"
@@ -465,44 +513,6 @@ bind_ieee:
       selector:
         entity:
           integration: zha
-    command_data:
-      description: "Binding target\nEntity name,\ndevice name, or\nIEEE address of the node to execute command"
-      example: "00:0d:6f:00:05:7d:2d:34"
-      required: true
-      selector:
-        entity:
-          integration: zha
-    cluster:
-      description: target cluster
-      selector:
-        number:
-          min: 0
-          max: 0xFFFF
-    tries:
-      description: Number of times the zigbee packet should be attempted
-      selector:
-        number:
-          min: 0 
-          max: 255
-    event_success:
-      description: Event name in case of success
-      example: my_read_success_trigger_event
-      selector:
-        text:
-    event_fail:
-      description: Event name in case of failure
-      example: my_read_fail_trigger_event
-      selector:
-        text:
-    event_done:
-      description: Event name when the service call did all its work (either success or failure).  Has event data with relevant attributes.
-      example: my_read_done_trigger_event
-      selector:
-        text:
-    expect_reply:
-       description: "Wait for/expect a reply (not used yet)"
-       selector:
-         boolean:
 znp_backup:
   description: Backup coordinator data (znp, bellows/ezsp)
   fields:
