Corrected and validate dynamic service definition updates

--- a/custom_components/zha_toolkit/services.yaml
+++ b/custom_components/zha_toolkit/services.yaml
@@ -619,6 +619,35 @@ handle_join:
           min: 1
           max: 0xFFFF
           mode: box
+ieee_ping:
+  description: Ping device
+  fields:
+    ieee:
+      description: "Ping: Requests IEEE address (using the known NWK Address)"
+      example: "00:0d:6f:00:05:7d:2d:34"
+      required: true
+      selector:
+        entity:
+          integration: zha
+    event_success:
+      description: Event name in case of success
+      example: my_read_success_trigger_event
+      selector:
+        text:
+    event_fail:
+      description: Event name in case of failure
+      example: my_read_fail_trigger_event
+      selector:
+        text:
+    event_done:
+      description: Event name when the service call did all its work (either success or failure).  Has event data with relevant attributes.
+      example: my_read_done_trigger_event
+      selector:
+        text:
+    expect_reply:
+       description: "Wait for/expect a reply (not used yet)"
+       selector:
+         boolean:
 misc_reinitialize:
   description: Reinitialize device
   fields:
